--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: my-application-build
+        path: |
+          eltarget/
